# FastAPI-Supabase

./: README.md  pyproject.toml
src/: main.py  schemas.py
